--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 	    <div class="container-fluid">
-		    <hl>Hello mweb</hl>
+		    <hl>Hello mwed</hl>
 		</div>
 		
 		<script src="js/jquery.min.js"></script>
